# slurm_job_stats

./: LICENSE.md  README.md  setup.cfg
slurm_job_stats/: __init__.py  __main__.py
