[metadata]
name = slurm_job_stats
# Update __version__ variable in fms_yaml_tools/__init__.py
version = attr: slurm_job_stats.__version__
author = Seth Underwood
author_email = Seth.Underwood@noaa.gov
description = Collect simple jobs statistics from SLURM
long_description = file: README.md
# https://opensource.org/licenses
license_files = LICENSE.md
# https://pypi.org/classifiers/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Environment :: Console

[options]
python_requires = >=3.7

[options.entry_points]
console_scripts =
    slurm_job_stats = slurm_job_stats.__main__:main
